add installemnt and add loan page with dummy content

--- a/generator/views/admin/view_members.hbs
+++ b/generator/views/admin/view_members.hbs
@@ -15,7 +15,7 @@
       <th scope="row">{{this.user_name}}</th>
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
-      <td><a href="" type="button" class="btn btn-primary">view</a></td>
+      <td><a href="admin/members_details" type="button" class="btn btn-primary">view</a></td>
     </tr>
     {{/each}}
     
