--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -9,13 +9,22 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Members</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Members
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+             <li><a class="dropdown-item" href="#">Add Member</a></li>
+            <li><a class="dropdown-item" href="#">View Members</a></li>
+            
+            {{!-- <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
+          </ul>
         </li>
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Installment
+            Monthly Installment
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Add</a></li>
@@ -29,8 +38,9 @@
             Loan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Add</a></li>
-            <li><a class="dropdown-item" href="#">view</a></li>
+             <li><a class="dropdown-item" href="#">Loan Withdrawal</a></li>
+            <li><a class="dropdown-item" href="#">Add installment</a></li>
+            <li><a class="dropdown-item" href="#">view loan</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
