get members from data base and showed

--- a/generator/views/admin/view_members.hbs
+++ b/generator/views/admin/view_members.hbs
@@ -12,7 +12,7 @@
   <tbody>
       {{#each members}}
     <tr>
-      <th scope="row">{{this.user_name}}</th>
+      <th scope="row">{{this.userName}}</th>
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
       <td><a href="admin/members_details" type="button" class="btn btn-primary">view</a></td>
