--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -14,8 +14,8 @@
             Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             <li><a class="dropdown-item" href="#">Add Member</a></li>
-            <li><a class="dropdown-item" href="#">View Members</a></li>
+             <li><a class="dropdown-item" href="admin/add_member">Add Member</a></li>
+            <li><a class="dropdown-item" href="admin/view_members">View Members</a></li>
             
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
