--- a/generator/views/admin/add_installment.hbs
+++ b/generator/views/admin/add_installment.hbs
@@ -1,19 +1,23 @@
 <section>
-    <div class="container">
+    <div class="container col-md-6 mt-5">
 
         <form class="row g-3">
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Reg Id</label>
-    <input type="Number" class="form-control" id="inputEmail4">
+    <input type="text" class="form-control" id="inputRegId">
   </div>
  
   <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">email</label>
-    <input type="email" class="form-control" id="inputEmail4">
+    <label for="inputEmail4" class="form-label">name</label>
+    <input type="name" class="form-control" id="inputName">
   </div>
   <div class="col-md-6">
+    <label for="inputCity" class="form-label">email</label>
+    <input type="text" class="form-control" id="inputAmount">
+  </div>
+   <div class="col-md-6">
     <label for="inputCity" class="form-label">Amount</label>
-    <input type="Number" class="form-control" id="inputAmount">
+    <input type="text" class="form-control" id="inputAmount">
   </div>
    <div class="form-group"> <!-- Date input -->
         <label class="control-label" for="date">Date</label>
