--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -14,8 +14,8 @@
             Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             <li><a class="dropdown-item" href="admin/add_member">Add Member</a></li>
-            <li><a class="dropdown-item" href="admin/view_members">View Members</a></li>
+             <li><a class="dropdown-item" href="../admin/add_member">Add Member</a></li>
+            <li><a class="dropdown-item" href="../admin/view_members">View Members</a></li>
             
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
@@ -27,8 +27,8 @@
             Monthly Installment
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Add</a></li>
-            <li><a class="dropdown-item" href="#">view</a></li>
+            <li><a class="dropdown-item" href="../admin//add_installment">Add installment</a></li>
+            <li><a class="dropdown-item" href="../admin/view_installment">View installment</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
@@ -51,6 +51,7 @@
         <input class="form-control me-2" type="search" placeholder="Search member" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+     
     </div>
   </div>
 </nav>
