added monthly installment and showed,search id for loan withdrawal

--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="../admin/just">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -21,14 +21,16 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
         </li>
+
         
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Monthly Installment
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="../admin//add_installment">Add installment</a></li>
-            <li><a class="dropdown-item" href="../admin/view_installment">View installment</a></li>
+            <li><a class="dropdown-item" href="../admin/searchId_addInstallment">Add installment</a></li>
+            <li><a class="dropdown-item" href="../admin/searchId_viewInstallment">View installment</a></li>
+            
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
@@ -38,9 +40,9 @@
             Loan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             <li><a class="dropdown-item" href="#">Loan Withdrawal</a></li>
-            <li><a class="dropdown-item" href="#">Add installment</a></li>
-            <li><a class="dropdown-item" href="#">view loan</a></li>
+             <li><a class="dropdown-item" href="../admin/searchId_loanWithdrawal">Loan Withdrawal</a></li>
+            <li><a class="dropdown-item" href="../admin/searchId_addLoan">Add installment</a></li>
+            <li><a class="dropdown-item" href="../admin/searchId_viewLoan">view loan</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
