--- a/generator/views/admin/view_members.hbs
+++ b/generator/views/admin/view_members.hbs
@@ -3,6 +3,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th scope="col">Reg Id</th>
       <th scope="col">User name</th>
       <th scope="col">email</th>
       <th scope="col">Phone no</th>
@@ -12,10 +13,12 @@
   <tbody>
       {{#each members}}
     <tr>
-      <th scope="row">{{this.userName}}</th>
+      <th scope="row">{{this.regId}}</th>
+      <th>{{this.userName}}</th>
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
-      <td><a href="admin/members_details" type="button" class="btn btn-primary">view</a></td>
+      <td><a href="admin/members_details" type="button" class="btn btn-primary">view Profile</a></td>
+      <td><a href="admin/members_details" type="button" class="btn btn-primary">Edit Profile</a></td>
     </tr>
     {{/each}}
     
