--- a/generator/views/admin/add_loan.hbs
+++ b/generator/views/admin/add_loan.hbs
@@ -1,19 +1,24 @@
 <section>
-    <div class="container">
+    <div class="container col-md-6 mt-5">
 
-        <form class="row g-3">
+        <form action="add_loan" method="post" class="row g-3">
+    {{#each member}}      
   <div class="col-md-6">
     <label for="inputEmail4" class="form-label">Reg Id</label>
-    <input type="Number" class="form-control" id="inputEmail4">
+    <input type="text" class="form-control" id="inputRegId" name="RegId" value="{{this.regId}}" readonly>
   </div>
  
   <div class="col-md-6">
-    <label for="inputEmail4" class="form-label">email</label>
-    <input type="email" class="form-control" id="inputEmail4">
+    <label for="inputEmail4" class="form-label">name</label>
+    <input type="text" class="form-control" id="inputName" name="name" value="{{this.userName}}" readonly>
   </div>
   <div class="col-md-6">
+    <label for="inputCity" class="form-label">email</label>
+    <input type="text" class="form-control" id="inputemail" name="email" value="{{this.email}}" readonly>
+  </div>
+   <div class="col-md-6">
     <label for="inputCity" class="form-label">Amount</label>
-    <input type="Number" class="form-control" id="inputAmount">
+    <input type="text" class="form-control" id="inputAmount" name="amount">
   </div>
    <div class="form-group"> <!-- Date input -->
         <label class="control-label" for="date">Date</label>
@@ -24,6 +29,7 @@
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Sumbit</button>
   </div>
+  {{/each}}
 </form>
 
     </div>
