loan balanace udated when loan installment added

--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -42,7 +42,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
              <li><a class="dropdown-item" href="../admin/searchId_loanWithdrawal">Loan Withdrawal</a></li>
             <li><a class="dropdown-item" href="../admin/searchId_addLoanInstallment">Add Loan installment</a></li>
-            <li><a class="dropdown-item" href="../admin/searchId_viewLoan">view loan</a></li>
+            <li><a class="dropdown-item" href="../admin/viewLoan">view loan</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
