--- a/generator/views/admin/add_loan.hbs
+++ b/generator/views/admin/add_loan.hbs
@@ -1,6 +1,11 @@
 <section>
-    <div class="container col-md-6 mt-5">
-
+    <div class="container col-md-9 mt-5">
+      {{#each balance}}
+<div class="col-md-6">
+    <label for="inputEmail4" class="form-label">loan balance</label>
+    <input type="text" class="form-control" id="inputRegId" name="RegId" value="{{this.amount}}" readonly>
+  </div>
+  {{/each}}
         <form action="add_loan" method="post" class="row g-3">
     {{#each member}}      
   <div class="col-md-6">
