monthly installlment sum got for each regId

--- a/generator/views/admin/view_members.hbs
+++ b/generator/views/admin/view_members.hbs
@@ -17,8 +17,8 @@
       <th>{{this.userName}}</th>
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
-      <td><a href="admin/members_details" type="button" class="btn btn-primary">view Profile</a></td>
-      <td><a href="admin/members_details" type="button" class="btn btn-primary">Edit Profile</a></td>
+      <td><a href="../admin/members_details/{{this.regId}}" type="button" class="btn btn-primary">view Profile</a></td>
+      <td><a href="../admin/members_details/{{this.regId}}" type="button" class="btn btn-primary">Edit Profile</a></td>
     </tr>
     {{/each}}
     
