--- a/generator/views/admin/view_profile.hbs
+++ b/generator/views/admin/view_profile.hbs
@@ -1,3 +1,7 @@
 {{#each sum}}
 <h1>total mothly installment is:{{this.sum}}</h1>
+
+{{/each}}
+{{#each total}}
+<h1>total loan balance is:{{this.amount}}</h1>
 {{/each}}
