--- a/generator/views/partials/admin-header.hbs
+++ b/generator/views/partials/admin-header.hbs
@@ -7,15 +7,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../admin/just">Home</a>
+          <a class="nav-link active" aria-current="page" href="/admin/just">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Members
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             <li><a class="dropdown-item" href="../admin/add_member">Add Member</a></li>
-            <li><a class="dropdown-item" href="../admin/view_members">View Members</a></li>
+             <li><a class="dropdown-item" href="/admin/add_member">Add Member</a></li>
+            <li><a class="dropdown-item" href="/admin/view_members">View Members</a></li>
             
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
@@ -28,8 +28,8 @@
             Monthly Installment
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="../admin/searchId_addInstallment">Add installment</a></li>
-            <li><a class="dropdown-item" href="../admin/searchId_viewInstallment">View installment</a></li>
+            <li><a class="dropdown-item" href="/admin/searchId_addInstallment">Add installment</a></li>
+            <li><a class="dropdown-item" href="/admin/searchId_viewInstallment">View installment</a></li>
             
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
@@ -40,9 +40,9 @@
             Loan
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-             <li><a class="dropdown-item" href="../admin/searchId_loanWithdrawal">Loan Withdrawal</a></li>
-            <li><a class="dropdown-item" href="../admin/searchId_addLoanInstallment">Add Loan installment</a></li>
-            <li><a class="dropdown-item" href="../admin/viewLoan">view loan</a></li>
+             <li><a class="dropdown-item" href="/admin/searchId_loanWithdrawal">Loan Withdrawal</a></li>
+            <li><a class="dropdown-item" href="/admin/searchId_addLoanInstallment">Add Loan installment</a></li>
+            <li><a class="dropdown-item" href="/admin/viewLoan">view loan</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
