member profile updation

--- a/generator/views/admin/view_members.hbs
+++ b/generator/views/admin/view_members.hbs
@@ -18,7 +18,7 @@
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
       <td><a href="members_details/{{this.regId}}" type="button" class="btn btn-primary">view Profile</a></td>
-      <td><a href="../admin/members_details/{{this.regId}}" type="button" class="btn btn-primary">Edit Profile</a></td>
+      <td><a href="edit_member/{{this.regId}}" type="button" class="btn btn-primary">Edit Profile</a></td>
     </tr>
     {{/each}}
     
