member part updated

--- a/generator/views/user/view_loan_installment.hbs
+++ b/generator/views/user/view_loan_installment.hbs
@@ -26,6 +26,12 @@
       <td>{{this.sum}}</td>
       {{/each}}
     </tr>
+    <tr>
+     {{#each balance}}
+      <td>Loan Balance To Pay</td>
+      <td>{{this.amount}}</td>
+      {{/each}}
+    </tr>
   </tbody>
 </table>
 {{!-- {{#each sum}}
