--- a/generator/public/stylesheets/style.css
+++ b/generator/public/stylesheets/style.css
@@ -20,6 +20,25 @@ body {
     height: 60px;
     text-indent: 25px;
     border: 2px solid #d6d4d4
+}body{
+    background: #f7f7ff;
+    margin-top:20px;
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid transparent;
+    border-radius: .25rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+}
+.me-2 {
+    margin-right: .5rem!important;
 }
 
 .search input:focus {
@@ -40,4 +59,34 @@ body {
     height: 50px;
     width: 110px;
     background: blue
+}
+table
+{
+    counter-reset: rowNumber;
+}
+
+table tr > td:first-child
+{
+    counter-increment: rowNumber;
+}
+
+table tr td:first-child::before
+{
+    content: counter(rowNumber);
+    min-width: 1em;
+    margin-right: 0.5em;
+}
+
+table#team-list {
+    counter-reset: rowNumber;
+}
+
+table#team-list tr:nth-child(n+1) {
+    counter-increment: rowNumber;
+}
+
+table#team-list tr:nth-child(n+1) td:first-child::before {
+    content: counter(rowNumber);
+    min-width: 1em;
+    margin-right: 0.5em;
 }
