--- a/generator/views/partials/user-header.hbs
+++ b/generator/views/partials/user-header.hbs
@@ -16,8 +16,9 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             
-            <li><a class="dropdown-item" href="../user/searchId_viewInstallment">View installment</a></li>
-            
+            <li><a class="dropdown-item" href="view_installment">View installment</a></li>
+            <li><a class="dropdown-item" href="search_year">View by year</a></li>
+            <li><a class="dropdown-item" href="view_by_month">View by month</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
           </ul>
@@ -28,7 +29,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             
-            <li><a class="dropdown-item" href="../user/searchId_addLoanInstallment">View Loan installment</a></li>
+            <li><a class="dropdown-item" href="view_loan_installment">View Loan installment</a></li>
             <li><a class="dropdown-item" href="">view loan balance</a></li>
             {{!-- <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li> --}}
